📝 docs: Adapt further proposals for our docs
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/app/docs/contributing/CONTRIBUTING_UPSTREAM.mdx
+++ b/src/app/docs/contributing/CONTRIBUTING_UPSTREAM.mdx
@@ -2,58 +2,60 @@ import { InlineNotification } from "../../../components/01_atoms/InlineNotificat
 import { LinkPure } from "../../../components/01_atoms/LinkPure";
 import { Tag } from "../../../components/01_atoms/Tag";
 
-## Contributing to open-source projects
+## How we contribute to open-source projects
 
 <InlineNotification theme="dark" dismissButton={false}>
   The purpose of this document is to provide transparency on how Porsche is
-  contributing to open-source projects and the standards we're internally
-  endorsing. The intended audience is both interested visitors as well as
-  employees of Porsche AG and subsidiaries.
+  contributing to open-source projects and the standards we're endorsing. The
+  intended audience is both interested visitors as well as employees of Porsche
+  AG and subsidiaries.
 </InlineNotification>
 
 ### Preliminary steps
 
-Before contributing to a third-party FOSS project, please make sure to
-follow our process for FOSS Contributions. You can find more information in our
-<LinkPure
-  theme="dark"
-  icon="lock"
-  href="https://skyway.porsche.com/confluence/display/OSO/Contribution+Guide"
->corporate wiki.</LinkPure>
+Following our [FOSS Movement](/#foss-movement), we empower our employees to
+dedicate time for participating in FOSS activities. FOSS activities are not only
+limited to contributing code but should also embrace non-code contributions such
+as design, translations, bug reporting, UX Improvement, recruiting, testing,
+documentation, project and community management, communication and many more.
+Our employees are provided with all means and information on our contribution
+policy in our <LinkPure theme="dark" icon="lock" underline="true"
+href="https://skyway.porsche.com/confluence/display/OSO/Contribution+Guide">
+corporate wiki.</LinkPure>
 
-### Be an outstanding open-source citizen
+Furthermore, we appreciate any contribution to the FOSS projects we're maintaining.
+You can find more information on the agreement under which you can contribute to
+our FOSS projects in our [Contributor License Agreement](/docs/cla).
+
+### Our pledge
 
 As Porsche Group, we do not only want to be a good open-source citizen by being
-compliant when consuming open-source software, but be an outstanding open-source
+compliant when using open-source software, but be an outstanding open-source
 citizen by contributing back to the community and collaborating with
-professionals worldwide. Thus, please ensure to
+professionals worldwide. Thus, we ensure to
 
 - act responsible,
 - help others wherever possible by sharing your knowledge,
 - learn from others and accept different standpoints or requirements,
 - give credit where credit's due, especially when collaborating with others.
 
-### Establish a 4-eyes-principle
+### Establishing a 4-eyes-principle
 
-If your proposed change is not trivial (e.g. fixing typos), please ensure that a
-colleague is able to
+If our proposed change is not trivial (e.g. fixing typos), we ensure that a
+second peer is able to
 
-- reproduce and confirm your issue or
-- review your change request and successfully build/execute the changed code.
+- reproduce and confirm the issue or
+- review the proposed change and successfully build/execute it.
 
-### Configuring your GitHub account
+More information on our coding principles can be found in the [Porsche Development
+Guidance.](https://devguidance.porsche.com/coding/core-principles/language/)
 
-As an employee of Porsche AG or subsidiary, you can use your existing
-account on GitHub to contribute to open-source projects. Please make sure that
+### Git Configuration
 
-- you and your supervisor have the required signature authorization,
-- you received final approval from Open Source Office at Porsche AG to contribute,
-- you have added an official Porsche email address to your GitHub account,
-- you sign all commits with your official Porsche email address and on behalf of
-  [@porscheofficial](https://github.com/porscheofficial).
-
-To sign a commit on behalf of Porsche, please add the following block to the end
-of all your commit messages:
+We will contribute to outbound FOSS projects by signing all our commits with an
+official Porsche email address and on behalf of
+[@porscheofficial](https://github.com/porscheofficial), including the following block
+at the end of our commit messages:
 
 ```
 Signed-off-by: Jane Doe <jane.doe@porsche.de>
