📝 doc: Add privacy policy
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/app/legal-notice/LEGAL_NOTICE.mdx
+++ b/src/app/legal-notice/LEGAL_NOTICE.mdx
@@ -27,13 +27,12 @@ a dispute settlement procedure before a consumer arbitration board.
 
 ### Legal notice
 
-All texts, images, audio files and other information published here, with the
-exception of clearly identified articles, are subject to the copyright of Dr.
-Ing. h.c. F. Porsche AG. Total or partial reproduction or distribution without
-the written authorisation of Dr. Ing. h.c. F. Porsche AG is not permitted. The
-Porsche logo and the Porsche Crest are registered trademarks of Dr. Ing. h.c. F.
-Porsche AG.
+The texts, images, graphics, animations, video and audio files as well as all
+other contents on this website are subject to the legal provisions of copyright
+law and, where applicable, other intellectual property rights. The proprietary
+content of this website may not be duplicated, distributed, reproduced, made
+publicly accessible or otherwise used without the prior consent of the right
+holder.
 
-All audio-visual content, including texts, photographs, graphics and also sound,
-video and animation files, are subject to copyright and other intellectual
-property rights.
+We reserve the right to change design, equipment and delivery specifications as
+well as vary colours.
