Re-add paragraph on signature authorization.
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/app/docs/contributing/CONTRIBUTING_UPSTREAM.mdx
+++ b/src/app/docs/contributing/CONTRIBUTING_UPSTREAM.mdx
@@ -62,6 +62,12 @@ Signed-off-by: Jane Doe <jane.doe@porsche.de>
 on-behalf-of: @porscheofficial <open_source_office@porsche.de>
 ```
 
+Thus, should you contribute on behalf of Porsche, please ensure that
+- you and your supervisor have the required signature authorization,
+- you received final approval from the Open Source Office at Porsche AG to contribute,
+- you have added an official Porsche email address to your GitHub account,
+- you sign all commits with your official Porsche email address as stated above.
+
 See [Setting your commit email
 address](https://docs.github.com/en/account-and-profile/setting-up-and-managing-your-personal-account-on-github/managing-email-preferences/setting-your-commit-email-address)
 and [Creating a commit on behalf of an
