--- a/src/app/docs/creating/CREATING_FOSS.mdx
+++ b/src/app/docs/creating/CREATING_FOSS.mdx
@@ -18,7 +18,7 @@ Our employees can find more information on our contribution policy in our
 <LinkPure theme="dark" icon="lock" underline="true"
 href="https://skyway.porsche.com/confluence/display/OSO/Contribution+Guide">corporate wiki.</LinkPure>
 
-### Establishing a 4-eyes-principle
+### Our GitHub flow
 
 We consider the default branch of our projects as stable/working and protect this
 with a minimal set of the following branch protection rules:
@@ -79,7 +79,7 @@ The following files and documents are generally included in all our open-source 
 
 Contributions to our open-source projects, may it be reporting issues or
 contributing changes, are highly appreciated! To foster a welcoming
-community, we encourage our maintainers to:
+community, we encourage our maintainers to
 
 - triage new issues created by you in a timely manner, and
 - address pull requests in a timely manner. If a pull request needs change or a
