📝 doc: Rephrase 4-eyes-principle
Signed-off-by: Eduard Itrich <eduard.itrich@porsche.de>
on-behalf-of: @porscheofficial <open_source_office@porsche.de>

--- a/src/app/docs/contributing/CONTRIBUTING_UPSTREAM.mdx
+++ b/src/app/docs/contributing/CONTRIBUTING_UPSTREAM.mdx
@@ -41,8 +41,7 @@ professionals worldwide. Thus, we ensure to
 
 ### Establishing a 4-eyes-principle
 
-If our proposed change is not trivial (e.g. fixing typos), we ensure that a
-second peer is able to
+Generally, we ensure that a second peer is able to
 
 - reproduce and confirm the issue or
 - review the proposed change and successfully build/execute it.
