feat: use contentlayer; split content

--- a/content/docs/cla.mdx
+++ b/content/docs/cla.mdx
@@ -1,3 +1,8 @@
+---
+title: Contributor License Agreement
+date: 2023-08-02
+---
+
 Thank you for your interest in contributing to an open source software project
 initiated and/or maintained by Us.
 
