--- a/content/docs/creating.mdx
+++ b/content/docs/creating.mdx
@@ -1,7 +1,7 @@
-import { InlineNotification } from "../../../components/01_atoms/InlineNotification";
-import { LinkPure } from "../../../components/01_atoms/LinkPure";
-import { Tag } from "../../../components/01_atoms/Tag";
-
+---
+title: Creating FOSS
+date: 2023-08-02
+---
 ## How we manage new open-source projects
 
 <InlineNotification theme="dark" dismissButton={false}>
