--- a/content/docs/contributing.mdx
+++ b/content/docs/contributing.mdx
@@ -1,6 +1,9 @@
-import { InlineNotification } from "../../../components/01_atoms/InlineNotification";
-import { LinkPure } from "../../../components/01_atoms/LinkPure";
-import { Tag } from "../../../components/01_atoms/Tag";
+---
+title: Contributing Upstream
+date: 2023-08-02
+---
+
+
 
 ## How we contribute to open-source projects
 
