feat: add blog/doc section

--- a/content/docs/creating.mdx
+++ b/content/docs/creating.mdx
@@ -1,7 +1,10 @@
 ---
 title: Creating FOSS
 date: 2023-08-02
+image: /assets/heroImage3.png
+descriptionShort: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
 ---
+
 ## How we manage new open-source projects
 
 <InlineNotification theme="dark" dismissButton={false}>
