--- a/content/blog/change-me.mdx
+++ b/content/blog/change-me.mdx
@@ -1,6 +1,8 @@
 ---
 title: Change me!
 date: 2023-08-02
+image: /assets/heroImage.png
+descriptionShort: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
 ---
 
 When you change a source file, Contentlayer automatically updates the content cache, which prompts Next.js to reload the content on screen.
