--- a/content/docs/cla.mdx
+++ b/content/docs/cla.mdx
@@ -1,6 +1,8 @@
 ---
 title: Contributor License Agreement
 date: 2023-08-02
+image: /assets/heroImage.png
+descriptionShort: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
 ---
 
 Thank you for your interest in contributing to an open source software project
