feat: change typo / assets

--- a/content/blog/change-me.mdx
+++ b/content/blog/change-me.mdx
@@ -1,7 +1,7 @@
 ---
 title: Change me!
 date: 2023-08-02
-image: /assets/heroImage.png
+image: /assets/cover5.png
 descriptionShort: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
 ---
 
