--- a/content/blog/new.mdx
+++ b/content/blog/new.mdx
@@ -1,7 +1,7 @@
 ---
 title: New
 date: 2023-08-10
-image: /assets/heroImage.png
+image: /assets/cover4.png
 descriptionShort: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
 ---
 
