--- a/content/blog/test.mdx
+++ b/content/blog/test.mdx
@@ -1,7 +1,7 @@
 ---
 title: Test
 date: 2023-08-03
-image: /assets/heroImage.png
+image: /assets/cover6.png
 descriptionShort: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
 ---
 
