feat: add new components to adjust detail pages

--- a/content/blog/change-me.mdx
+++ b/content/blog/change-me.mdx
@@ -3,6 +3,33 @@ title: Change me!
 date: 2023-08-02
 image: /assets/cover5.png
 descriptionShort: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+author:
+  name: Lorem ipsum dolor sit amet, consetetur sadipscing elitr
+  description: Lorem ipsum dolor sit amet, consetetur sadipscing elitr
+  image: https://picsum.photos/id/669/300/300
+  slug: https://www.contentlayer.dev/
+readTime: 3min
+hashTags:
+  - category
+  - Another Tag
 ---
 
-When you change a source file, Contentlayer automatically updates the content cache, which prompts Next.js to reload the content on screen.
+<ImageTextList list={[
+    {
+        description: "### 2. Subject of data protection" +
+            " When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the",
+        imageSrc: "https://picsum.photos/id/11/1600/900"
+    },
+    {
+        description: "When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the",
+        imageSrc: "https://picsum.photos/id/22/1600/900"
+    },
+    {
+        description: "When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the",
+        imageSrc: "https://picsum.photos/id/33/1600/900"
+    },
+    {
+        description: "When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the",
+        imageSrc: "https://picsum.photos/id/44/1600/900"
+    }
+]} />
