--- a/content/blog/test.mdx
+++ b/content/blog/test.mdx
@@ -1,8 +1,17 @@
 ---
 title: Test
-date: 2023-08-03
+date: 2023-08-10
 image: /assets/cover6.png
 descriptionShort: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+author:
+  name: Lorem ipsum dolor
+  description: Small bio
+  image: https://picsum.photos/id/65/300/300
+  slug: https://www.contentlayer.dev/
+readTime: 3min
+hashTags:
+  - category
+  - Another Tag
 ---
 
 When you change a source file, Contentlayer automatically updates the content cache, which prompts Next.js to reload the content on screen.
