--- a/content/blog/new.mdx
+++ b/content/blog/new.mdx
@@ -3,6 +3,10 @@ title: New
 date: 2023-08-10
 image: /assets/cover4.png
 descriptionShort: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.
+author:
+  name:  Lorem ipsum dolor
+  image: https://picsum.photos/id/669/300/300
+readTime: 3min
 ---
 
 When you change a source file, Contentlayer automatically updates the content cache, which prompts Next.js to reload the content on screen.
