chore: remove component workaround

--- a/content/docs/contributing.mdx
+++ b/content/docs/contributing.mdx
@@ -9,12 +9,12 @@ descriptionShort: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed d
 
 ## How we contribute to open-source projects
 
-<InlineNotification theme="dark" dismissButton={false}>
+<PInlineNotification theme="dark" dismissButton={false}>
   The purpose of this document is to provide transparency on how Porsche is
   contributing to open-source projects and the standards we're endorsing. The
   intended audience is both interested visitors as well as employees of Porsche
   AG and subsidiaries.
-</InlineNotification>
+</PInlineNotification>
 
 ### Preliminary steps
 
@@ -24,9 +24,9 @@ limited to contributing code but should also embrace non-code contributions such
 as design, translations, bug reporting, UX Improvement, recruiting, testing,
 documentation, project and community management, communication and many more.
 Our employees are provided with all means and information on our contribution
-policy in our <LinkPure theme="dark" icon="lock" underline="true"
+policy in our <PLinkPure theme="dark" icon="lock" underline="true"
 href="https://skyway.porsche.com/confluence/display/OSO/Contribution+Guide">
-corporate wiki.</LinkPure>
+corporate wiki.</PLinkPure>
 
 Furthermore, we appreciate any contribution to the FOSS projects we're maintaining.
 You can find more information on the agreement under which you can contribute to
