--- a/content/docs/creating.mdx
+++ b/content/docs/creating.mdx
@@ -7,19 +7,19 @@ descriptionShort: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed d
 
 ## How we manage new open-source projects
 
-<InlineNotification theme="dark" dismissButton={false}>
+<PInlineNotification theme="dark" dismissButton={false}>
   The purpose of this document is to provide transparency on how Porsche is
   managing new open-source projects and the standards we're endorsing to foster
   healthy communities. The intended audience is both interested visitors as well
   as employees of Porsche AG and subsidiaries.
-</InlineNotification>
+</PInlineNotification>
 
 ### Preliminary steps
 
 We support and encourage our employees to launch and maintain new FOSS projects.
 Our employees can find more information on our contribution policy in our
-<LinkPure theme="dark" icon="lock" underline="true"
-href="https://skyway.porsche.com/confluence/display/OSO/Contribution+Guide">corporate wiki.</LinkPure>
+<PLinkPure theme="dark" icon="lock" underline="true"
+href="https://skyway.porsche.com/confluence/display/OSO/Contribution+Guide">corporate wiki.</PLinkPure>
 
 ### Our GitHub flow
 
@@ -37,19 +37,19 @@ with a minimal set of the following branch protection rules:
 More information on our GitHub flow can be found in the [Porsche Development
 Guidance.](https://devguidance.porsche.com/coding/vcs/git-branching-model/#nowadays-widely-adopted-github-flow)
 
-<InlineNotification theme="dark" dismissButton={false}>
+<PInlineNotification theme="dark" dismissButton={false}>
 To contribute to an open-source project maintained by Porsche, please fork the
 repository, commit your changes to a separate branch and get them merged into
 the default branch via a reviewed pull request. More information on how to
 contribute to our projects can be found in the CONTRIBUTING.md file of the
 particular project.
-</InlineNotification>
+</PInlineNotification>
 
 ### Necessary files and documents
 
 The following files and documents are generally included in all our open-source projects: 
 
-1. A pull request template <Tag theme="dark">.github/PULL_REQUEST_TEMPLATE.md</Tag>:
+1. A pull request template <PTag theme="dark">.github/PULL_REQUEST_TEMPLATE.md</PTag>:
 
    ```markdown
    ### Pull Request Checklist
@@ -64,19 +64,19 @@ The following files and documents are generally included in all our open-source 
    checkbox "**I have read and accept the Contributor License Agreement**" is
    always required.
 
-2. The unmodified license text of the FOSS project in a file named <Tag
-   theme="dark">LICENSE.md</Tag>.
+2. The unmodified license text of the FOSS project in a file named <PTag
+   theme="dark">LICENSE.md</PTag>.
 
-3. A <Tag theme="dark">README.md</Tag> that introduces and explains the FOSS
+3. A <PTag theme="dark">README.md</PTag> that introduces and explains the FOSS
    project. We're following the [makeareadme.com](https://makeareadme.com/)
    template for writing good READMEs.
 
-4. A file <Tag theme="dark">CONTRIBUTING.md</Tag> that explains how to contribute to
+4. A file <PTag theme="dark">CONTRIBUTING.md</PTag> that explains how to contribute to
    the FOSS project. 
 
 5. If third-party components are distributed as a bundled
    release, a compulsory Open Source Software Notice in a file named
-   <Tag theme="dark">NOTICE.txt</Tag>.
+   <PTag theme="dark">NOTICE.txt</PTag>.
 
 ### Fostering a welcoming community
 
