chore: refactor list image component to render mdx content

--- a/content/blog/change-me.mdx
+++ b/content/blog/change-me.mdx
@@ -14,22 +14,50 @@ hashTags:
   - Another Tag
 ---
 
-<ImageTextList list={[
-    {
-        description: "### 2. Subject of data protection" +
-            " When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the",
-        imageSrc: "https://picsum.photos/id/11/1600/900"
-    },
-    {
-        description: "When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the",
-        imageSrc: "https://picsum.photos/id/22/1600/900"
-    },
-    {
-        description: "When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the",
-        imageSrc: "https://picsum.photos/id/33/1600/900"
-    },
-    {
-        description: "When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the",
-        imageSrc: "https://picsum.photos/id/44/1600/900"
-    }
-]} />
+<ImageText className={"imageTextList"}>
+    <div className={"description"}>
+    ### 2. Subject of data protection
+    When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the",
+    </div>
+    <div className={"image"}>
+        <ExportedImage
+            src={"https://picsum.photos/id/669/300/300"}
+            alt=""
+            fill
+            placeholder="empty"
+        />
+    </div>
+</ImageText>
+
+<ImageText className={"imageTextList"}>
+    <div className={"image left"}>
+        <ExportedImage
+            src={"https://picsum.photos/id/669/300/300"}
+            alt=""
+            fill
+            placeholder="empty"
+        />
+    </div>
+    <div className={"description left"}>
+        ### 2. Subject of data protection
+        When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the",
+    </div>
+</ImageText>
+
+<ImageText className={"imageTextList"}>
+    <div className={"description"}>
+        ### 2. Subject of data protection
+        When you change a source file, Contentlayer automatically
+        <PLinkPure theme="dark" icon="lock" underline="true"
+                   href="https://skyway.porsche.com/confluence/display/OSO/Contribution+Guide">corporate wiki.</PLinkPure>
+        updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the When you change a source file, Contentlayer automatically updates the",
+    </div>
+    <div className={"image"}>
+        <ExportedImage
+            src={"https://picsum.photos/id/669/300/300"}
+            alt=""
+            fill
+            placeholder="empty"
+        />
+    </div>
+</ImageText>
