feat: migrate mdx files to contentlayer

--- a/content/static/FOSS_MOVEMENT.mdx
+++ b/content/static/FOSS_MOVEMENT.mdx
@@ -1,14 +1,9 @@
-import { KeyValue } from "../components/02_molecules/foss_movement/KeyValue";
-import { Principle } from "../components/02_molecules/foss_movement/Principle";
-import s from "./page.module.scss";
-import { PDisplay } from "@porsche-design-system/components-react/ssr";
-
 <PDisplay
   tag="h2"
   theme="dark"
   align="center"
   size="small"
-  className={s.keyvalues}
+  className={"keyvalues"}
 >
   Our Key Values and Principles
 </PDisplay>
@@ -80,3 +75,4 @@ import { PDisplay } from "@porsche-design-system/components-react/ssr";
     upstream projects by being provided with lean but compliant processes.
   </Principle>
 </KeyValue>
+
